<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_blue_1"
    tools:context=".Profile.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/white_round_corner"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/profile"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/profile_image"
                    app:civ_border_color="@android:color/transparent"
                    app:civ_border_width="0dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFieldPetName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="Enter Pet Name"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:startIconDrawable="@drawable/ic_pets"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFieldOwnerName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Enter Owner Name"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFieldEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Enter Owner Email"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/black"
                    android:enabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="14dp"
                    android:text="Select pet type"/>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/petType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDog"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/dog"
                        android:textColor="@color/black"
                        app:checkedIcon="@drawable/ic_pets"
                        app:checkedIconEnabled="true"
                        app:checkedIconTint="@color/black"
                        app:chipBackgroundColor="@color/liteGray"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipCat"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/cat"
                        android:textColor="@color/black"
                        app:checkedIcon="@drawable/ic_paw_prints"
                        app:checkedIconEnabled="true"
                        app:checkedIconTint="@color/black"
                        app:chipBackgroundColor="@color/liteGray"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBird"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/bird"
                        android:textColor="@color/black"
                        app:checkedIcon="@drawable/ic_bird"
                        app:checkedIconEnabled="true"
                        app:checkedIconTint="@color/black"
                        app:chipBackgroundColor="@color/liteGray"/>

                </com.google.android.material.chip.ChipGroup>

                <Button
                    android:id="@+id/btnUpdateProfile"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:background="@drawable/blue_rounded_corner" />

                <Button
                    android:id="@+id/btnRemoveProfile"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/remove"
                    android:textColor="@color/white"
                    android:background="@drawable/blue_rounded_corner" />

                <TextView
                    android:id="@+id/txtPswChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:text="Do you want change account password?"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:paddingTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btnAllMoments"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:text="View Moments"
                        android:textColor="@color/white"
                        android:background="@drawable/blue_rounded_corner" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:paddingTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btnAllFoodItems"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:text="View Food Items"
                        android:textColor="@color/white"
                        android:background="@drawable/blue_rounded_corner" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>