<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_blue_1"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/white_round_corner"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:layout_marginTop="75dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/register"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFieldPetName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:hint="Pet Name"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:startIconDrawable="@drawable/ic_pets"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFieldOwnerName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Owner Name"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFieldEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Owner Email"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFieldPsw"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Password"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFieldCPsw"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Confirm Password"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="14dp"
                    android:text="Select pet type"/>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/petType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDog"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/dog"
                        android:textColor="@color/black"
                        app:checkedIcon="@drawable/ic_pets"
                        app:checkedIconEnabled="true"
                        app:checkedIconTint="@color/black"
                        app:chipBackgroundColor="@color/liteGray"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipCat"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/cat"
                        android:textColor="@color/black"
                        app:checkedIcon="@drawable/ic_paw_prints"
                        app:checkedIconEnabled="true"
                        app:checkedIconTint="@color/black"
                        app:chipBackgroundColor="@color/liteGray"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBird"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/bird"
                        android:textColor="@color/black"
                        app:checkedIcon="@drawable/ic_bird"
                        app:checkedIconEnabled="true"
                        app:checkedIconTint="@color/black"
                        app:chipBackgroundColor="@color/liteGray"/>

                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:text="Already have an account? Sign in"/>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:background="@drawable/blue_rounded_corner" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>